--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
 { "name" : "inspection-center"
 , "version" : "0.0.1"
-, "description" : "A car inspection center !"}
+, "main" : "./index"
+, "description" : "A car inspection center !"
+, "private" : "true"}
